--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
     - docker build -t smj2020/docker-react -f Dockerfile.dev .
 
 script:
-    - docker run smj2020/docker-react -- --coverage
+    - docker run smj2020/docker-react npm run test -- --coverage
